--- a/src/WebApp/appsettings.Development.json
+++ b/src/WebApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=InertiaTemplateDb;Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
+    "DefaultConnection": "Server=localhost;Database=OliveBranchDb;Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
