Pull Identity Down a level
Pull identity stores down to the domain level to make it easier to work with the Appuser entity

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.3" />
     </ItemGroup>
 
 </Project>
