--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -18,7 +18,7 @@
 
     <ItemGroup>
 
-        <PackageReference Include="AspNetCore.InertiaCore" Version="0.0.5" />
+        <PackageReference Include="AspNetCore.InertiaCore" Version="0.0.8" />
 
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.3" />
 
@@ -42,6 +42,10 @@
     <ItemGroup>
         <EmbeddedResource Remove="Resources\**" />
         <Content Remove="Resources\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\" />
     </ItemGroup>
     
 
