--- a/src/WebApp/package.json
+++ b/src/WebApp/package.json
@@ -1,10 +1,8 @@
 {
   "scripts": {
-    "dev": "mix",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "production": "mix --production"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +15,15 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@vitejs/plugin-vue": "^4.3.4",
     "@vue/compiler-sfc": "^3.2.47",
-    "autoprefixer": "^10.4.13",
-    "laravel-mix": "^6.0.49",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "vue-loader": "^16.2.0"
+    "autoprefixer": "^10.4.15",
+    "axios": "^1.1.2",
+    "laravel-vite-plugin": "^0.8.0",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.0.0",
+    "vue": "^3.2.41"
   },
   "-vs-binding": {
     "AfterBuild": [
